# order-service/internal/server/http/controllers/order_controller.go
@@ -55,7 +55,7 @@ func (c *OrderController) BatchCreate(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if errs := validators.ValidateV1CreateOrderRequest(&req); errs != nil {
-		l.Errorw("order_controller.request_validation_failed", "err", errs)
+		l.Errorw("order_controller.create_order_request_validation_failed", "err", errs)
 		c.writeJSON(w, http.StatusBadRequest, errs)
 		return
 	}
@@ -114,7 +114,7 @@ func (c *OrderController) QueryOrders(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if errs := validators.ValidateV1QueryOrdersRequest(req); errs != nil {
-		l.Errorw("order_controller.request_validation_failed", "err", errs)
+		l.Errorw("order_controller.quey_orders_request_validation_failed", "err", errs)
 		c.writeJSON(w, http.StatusBadRequest, errs)
 		return
 	}
@@ -139,6 +139,65 @@ func (c *OrderController) QueryOrders(w http.ResponseWriter, r *http.Request) {
 	c.writeJSON(w, http.StatusOK, resp)
 }
 
+// AuditLogOrderBatchCreate godoc
+// @Summary Create audit logs for orders batch
+// @Description Creates audit logs for orders
+// @Tags audit_logs
+// @Accept json
+// @Produce json
+// @Param request body dto.V1CreateAuditLogOrderRequest true "Create Audit Log Order Request"
+// @Success 200 {object} dto.V1CreateAuditLogOrderResponse
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /api/v1/audit-log/order/batch-create [post]
+func (c *OrderController) AuditLogOrderBatchCreate(w http.ResponseWriter, r *http.Request) {
+	l := c.log.With("op", "audit_log_order_batch_create")
+	l.Infow("order_controller.audit_log_order_batch_create_start")
+
+	if r.Method != http.MethodPost {
+		l.Warnw("order_controller.audit_log_order_batch_create_failed", "err", "Method not allowed", "method", r.Method)
+		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+		return
+	}
+
+	var req dto.V1CreateAuditLogOrderRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		l.Errorw("order_controller.audit_log_order_batch_create_failed", "err", err)
+		http.Error(w, "Invalid request payload", http.StatusBadRequest)
+		return
+	}
+
+	if errs := validators.ValidateV1CreateAuditLogOrderRequest(req); errs != nil {
+		l.Errorw("order_controller.create_audit_log_order_request_validation_failed", "err", errs)
+		c.writeJSON(w, http.StatusBadRequest, errs)
+		return
+	}
+
+	var logs []models.AuditLogOrder
+	for _, i := range req.Orders {
+		logs = append(logs, mappers.DtoAuditLogOrderToBll(i))
+	}
+
+	auditLogOrderReporderService := c.createAuditLogOrderService(l)
+	defer auditLogOrderReporderService.UnitOfWork().Close()
+
+	result, err := auditLogOrderReporderService.BatchInsert(r.Context(), logs)
+	if err != nil {
+		l.Errorw("order_controller.audit_log_order_batch_insert_failed", "err", "Internal server error")
+		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		return
+	}
+
+	l.Infow("order_controller.audit_log_order_batch_create_success")
+
+	var resp dto.V1CreateAuditLogOrderResponse
+	for _, i := range result {
+		resp.Orders = append(resp.Orders, mappers.BllAuditLogOrderToDto(i))
+	}
+
+	c.writeJSON(w, http.StatusOK, resp)
+}
+
 func (c *OrderController) writeJSON(w http.ResponseWriter, status int, data interface{}) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(status)
@@ -152,4 +211,12 @@ func (c *OrderController) createOrderService(log *zap.SugaredLogger) *services.O
 
 	orderService := services.NewOrderService(uow, orderRepo, orderItemRepo, c.orderCreatedPublisher, log)
 	return orderService
+}
+
+func (c *OrderController) createAuditLogOrderService(log *zap.SugaredLogger) *services.AuditLogOrderService {
+	uow := unitofwork.New(c.pgClient)
+	auditLogOrderRepo := repositories.NewAuditLogOrderRepository(uow)
+
+	auditLogOrderService := services.NewAuditLogOrderService(uow, auditLogOrderRepo, log)
+	return auditLogOrderService
 }
